# testDiplom

./: CMakeLists.txt  Coordinate.h  Defines.h  Error.h  FileHandler.h  Lexer.h  Node.cpp  Node.h  Value.cpp  Value.h  _debug.tex  _funcs.tex  _new_lab.tex  basic_HM.cpp  basic_HM.h  ceil.tex  clear_and_build.sh  debug.tex  funcs.tex  main.cpp  new_lab.tex  run_tests.sh  test.tex  test_data.txt
